# PyConChina2023

./: .gitignore  LICENSE  PyConChina 2023.lektorproject  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: build.yaml
assets/static/: custom.css
content/: contents.lr
content/404.html/: contents.lr
content/about/: contents.lr
content/beijing/: contents.lr
content/beijing/aigc-text-gen-gpu/: contents.lr
content/beijing/knowledge-graph-llm-app/: contents.lr
content/beijing/python-observable/: contents.lr
content/beijing/semantic-kernel-aoai-llm/: contents.lr
content/beijing/tidb-serverless-branching-python/: contents.lr
content/cfp/: contents.lr
content/chengdu/: contents.lr
content/chengdu/accessing-mongodb-sub-documents-through-proxy-objects/: contents.lr
content/chengdu/llm-base-agent/: contents.lr
content/chengdu/micropython-detector/: contents.lr
content/chengdu/open-source-education/: contents.lr
content/chengdu/openharmony-python/: contents.lr
content/chengdu/python-312-enhancements/: contents.lr
content/chengdu/rospython/: contents.lr
content/chongqing/: contents.lr
content/guangzhou/: contents.lr
content/hangzhou/: contents.lr
content/partners/: contents.lr
content/shanghai/: contents.lr
content/shenzhen/: contents.lr
content/special-thanks/: contents.lr
content/volunteer/: contents.lr
databags/: nav.json
models/: city.ini  page.ini  talk.ini
templates/: 404.html  city.html  home.html  layout.html  page.html  talk.html
templates/components/: footer.html  nav.html
(+29 files in other folders)
